--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <div id="gamecontainer">
         <header>
-            <img src="/senakee-pic.png" alt="logo" width="200">
+            <img src="/senakee-logo.png" alt="logo" width="200">
+            
         </header>
         <ul class="game_levels">
             <li id="levelone">Level 1</li>
